<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fullPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/desc_post_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ImageButton
        android:id="@+id/fullPhotoShareButton"
        style="@style/LargeImageButton"
        android:layout_width="@dimen/image_button_large_size"
        android:layout_height="@dimen/image_button_large_size"
        android:layout_margin="@dimen/spacing_large"
        android:contentDescription="@string/desc_share_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_share_layer" />

    <ImageButton
        android:id="@+id/fullPhotoSaveButton"
        style="@style/LargeImageButton"
        android:layout_width="@dimen/image_button_large_size"
        android:layout_height="@dimen/image_button_large_size"
        android:layout_margin="@dimen/spacing_large"
        android:contentDescription="@string/desc_save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fullPhotoShareButton"
        app:srcCompat="@drawable/ic_save_layer" />
</androidx.constraintlayout.widget.ConstraintLayout>