<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/postCloseButton"
        style="@style/MediumImageButton"
        android:layout_width="@dimen/image_button_medium_size"
        android:layout_height="@dimen/image_button_medium_size"
        android:background="@null"
        android:contentDescription="@string/desc_close_button"
        android:src="@drawable/ic_close_layer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/postPublishButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_publish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/publishProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postCloseButton" />

    <EditText
        android:id="@+id/postMessageEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:focusable="true"
        android:gravity="start|top"
        android:hint="@string/hint_post_message"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:paddingHorizontal="@dimen/padding_default"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toTopOf="@id/attachmentRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/publishProgressBar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attachmentRecycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_default"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_default"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/item_photo_attachment" />
</androidx.constraintlayout.widget.ConstraintLayout>